@@ -395,14 +395,16 @@ function reseller_checkData($phpini)
 	}
 
 	// Check for mail quota
-	if (!imscp_limit_check($mailQuota, null)) {
-		set_page_message(tr('Wrong syntax for the mail quota value.'), 'error');
-	} elseif ($diskSpace != 0 && $mailQuota > $diskSpace) {
-		set_page_message(tr('Email quota cannot be bigger than disk space limit.'), 'error');
-	} elseif($diskSpace != 0 && $mailQuota == 0) {
-		set_page_message(
-			tr('Email quota cannot be unlimited. Max value is %d MiB.', $diskSpace), 'error'
-		);
+	if (isset($_POST['hp_mail_quota'])) {
+		if (!imscp_limit_check($mailQuota, null)) {
+			set_page_message(tr('Wrong syntax for the mail quota value.'), 'error');
+		} elseif ($diskSpace != 0 && $mailQuota > $diskSpace) {
+			set_page_message(tr('Email quota cannot be bigger than disk space limit.'), 'error');
+		} elseif($diskSpace != 0 && $mailQuota == 0) {
+			set_page_message(
+				tr('Email quota cannot be unlimited. Max value is %d MiB.', $diskSpace), 'error'
+			);
+		}
 	}
 
 	if ($phpini->checkRePerm('phpiniSystem') && isset($_POST['phpiniSystem'])) {
